--- a/document/MainMatter/Background.tex
+++ b/document/MainMatter/Background.tex
@@ -49,7 +49,7 @@ a aprtir de los datos, y las que tienen un caracter más orientado al proceso li
 en si( realización)( ~\cite{Gatt2018SurveyOT}). Cada una de estas tareas, aunque no presentes todas en todos los sitemas,  presentan distintos 
 objetivos dentro de los mismos y existen distintas técnias para cada una de ellas en la literatura.
     
-\subsection{Determinación del contenido}
+\subsection{Determinación del contenido}\label{subsection:selecciondelcontenido}
 
     Cada sistema GLN tiene un objetivo comunicativo, lo cual hace necesario determinar que información del dominio es relevante y debe 
 estar representada en el texto final(\cite{reiter_dale_2000}). Los sistemas pueden presentar una especificación de los datos de la entrada 
@@ -72,7 +72,7 @@ un corpus de resultados deseados(texto escrito por humanos) aparejados con los t
 expresan si determinado dato de entrada debe aparecer o no reflejado en la salida y bajo que condiciones. Este sistema se utilizó para la generación de descripciones biográficos cortas que resumirán hechos 
 importantes sobre personajes famosos.
 
-\subsection{Estructuración del texto}
+\subsection{Estructuración del texto}\label{subsection:estructuracion}
 
     La estructuración del texto o planificación del discurso es el proceso donde se da orden y estructura al conjunto de mensajes a expresar en el texto producido. En un texto la información se presenta en un orden particular 
 y, por lo general, hay una estructura subyacente a la presentación. La complejidad de la estructura de los textos puede variar de un sistema a otro. Una buena estructuración puede hacer que un texto sea mucho más fácil 
@@ -89,7 +89,7 @@ sus siglas en inglés, Rhetorical Structure Theory)(~\cite{mann1988rhetorical}).
 relaciones funcionales entre sus distintas partes. La RST tiene como base los conceptos de n\'ucleo y sat\'elite que definen las partes del texto entre las que se estable un relaci\'on. Los distintos sistemas que utilizan las estructuras ret\'oricas 
 para la estructuraci\'on del texto definen que tipo de relaciones establecen. Ejemplo de relaciones lingüísticas planteadas por Mann y Thompson en su trabajo son: motivaci\'on, causa, condici\'on, cirscuntancia, etc(~\cite{mann1988rhetorical}). 
 
-\subsection{Agregación}
+\subsection{Agregación}\label{subsection:agregacion}
 
     En un texto, cada parte de información no tiene que estar presente en oraciones independientes. Hay escenarios donde es 
 deseable que distintos mensajes sean transmitidos en una misma oraci\'on. La agreagaci\'on puede permitir crear texto de mayor 
@@ -125,7 +125,7 @@ redundancia(~\cite{Gatt2018SurveyOT}). Por ejemplo, convertir (3) en (4) a conti
     
 podría lograrse identificando las frases verbales paralelas en las dos oraciones conjuntas y eliminando el sujeto y el verbo en la segunda.
 
-\subsection{Lexicalización}
+\subsection{Lexicalización}\label{subsection:lexicalizacion}
 
     La lexicalización es un proceso muy importante dentro de un sitema de GLN. Es el proceso durante el cual se 
 seleccionan la palabra o palabras que expresan un concepto o relaci\'on(~\cite{Reiter1997BuildingAN}). Una de las 
@@ -153,7 +153,7 @@ el mismo. Así mismo ofrecen una mayor cobertura de las representaciones semánt
 un modelo que utiliza este enfoque presentado en el dominio de las recetas de cocina.
 
 
-\subsection{Expresiones de referencia}
+\subsection{Expresiones de referencia}\label{subsection:expreferencia}
 
     Robert Dale y Ehud Rither describieron la generación de expresiones de referencias dentro de un sitema de GLN como la tarea de 
 indentificar la expresión, comprensible de cara al usuario, a utilizar para indetificar a una instancia del dominio(~\cite{reiter_dale_2000,Gatt2018SurveyOT}). 
@@ -190,7 +190,7 @@ el apellido se utiliza cuando se trata de una referencia tard\'ia.
 %entrenamiento del modelo utilizaron una versi\'on deslexicalizada del corpus \textit{WebNLG} . Cada entidad presente en los datos fue mapeada
 % con diferentes etiquetas de forma tal que 
 
-\subsection{Realización lingüística}
+\subsection{Realización lingüística}\label{subsection:realizcion}
 
     El proceso de realizaci\'on lingüística es el que da lugar a la formaci\'on final del texto expresado en oraciones con una 
 estructura gramatical correcta y coherente con el mensaje a transmitir. Esta tarea implica ordenar los constituyentes de una oración, 
