--- a/document/MainMatter/Proposal.tex
+++ b/document/MainMatter/Proposal.tex
@@ -360,8 +360,8 @@ Las \textit{plantilla de resultado} se construyeron en distintos grupos en depen
 
     Para la expresión de los goles se utilizan las plantillas: \textit{tipo de gol}, \textit{resultado del gol}, 
     \textit{asistencia}, \textit{tiempo}. Para los goles se identifican cuatro tipos: autogol, gol de tiro libre, 
-    gol de penal y gol simple. A su vez, las cirscunstancias de la acción condicionan a la hora de expresar el resultado 
-    de un gol. Se identifica que un gol puede ser el primer gol del partido, o el único gol del partido, o pueden empatar 
+    gol de penal y gol simple. A su vez, las cirscunstancias del partido condicionan a la hora de expresar el resultado 
+    de un gol. Se identifica que un gol puede ser el primer gol del partido, o el único gol del partido, o puede empatar 
     un resutado, desemaptar un resultado, aumentar la ventaja o disminuir la ventaja.
     Se escoge entre 14 estructuras de oraciones de forma aleatoria a la hora de realizar una acción de gol. Se presentan tres 
     de estas estructuras, las restantes son variaciones estructurales de las mismas.
@@ -409,4 +409,24 @@ Las \textit{plantilla de resultado} se construyeron en distintos grupos en depen
 
     El modelo desarrollado es capaz de desarrollar textos que siguen la estructura elegida y cumple con el objetivo de 
 crear un reporte de un partido de fútbol partiendo de la base de ser independiente de la fuente de datos utilizada. 
-A continuación se muestra el dos variantes distintas producidas por el modelo para un mismo partido.
+A continuación se muestran  dos variantes distintas producidas por el modelo para un mismo partido cuyo resultado reflejado por el 
+\textit{Diario AS} se puede ver en figura \ref{fig_rayomadrid}.
+\\
+
+\begin{figure}[!]
+    \begin{center}
+        \includegraphics[scale=0.4]{Graphics/rayomadrid.png}
+    \end{center}
+    \caption{Muestra del resultado del partido y los goles por el \textit{Diario AS}}
+    \label{fig_rayomadrid}
+\end{figure}
+
+\begin{itemize}
+    \item \textit{En el Estadio de Vallecas con la presencia de 13200 espectadores, Rayo Vallecano logró la victoria sobre Real Madrid 3 a 2.
+    Asistido por Fran García, un gol de Comesaña en el minuto cuatro deshizo el cero en el marcador adelantando a Rayo Vallecano. Luka Modric con un gol desde el punto de penal en el minuto 36 puso nuevamente las tablas. En el minuto cuarenta, un tiro preciso de Militao, a pase de Marco Asensio, dió la delantera en el marcador a Real Madrid. Cuando corría el minuto 43, un buen disparo de Álvaro García acabó con la ventaja de Real Madrid. En el minuto 66, con un gol de penal, Trejo puso a Rayo Vallecano en ventaja.
+    Trejo, centrocampista de Rayo Vallecano, fue el mvp del partido con un gol.}
+    \item \textit{Rayo Vallecano se llevó la victoria 3 a 2 frente a Real Madrid en el Estadio de Vallecas ante un público de 13200 espectadores.
+    En el cuatro, Comesaña con un tiro preciso declinó la balanza inicial a favor de Rayo Vallecano, el pase fue de Fran García. Luka Modric niveló el encuentro con un tiro ajustado preciso desde el punto de penal cuando corría el minuto 36. Cuando el crono marcaba el minuto cuarenta, con un disparo ajustado a pase de su compañero Marco Asensio, Militao deshizo la igualdad en favor de Real Madrid. Cuando el crono marcaba el minuto 43 una buena definición de Álvaro García acabó con la ventaja de Real Madrid. Trejo deshizo la igualdad en favor de Rayo Vallecano en el 66 con un gol desde los once metros.
+    Con una anotación, el centrocampista de Rayo Vallecano, Trejo, fue el jugador más destacado del partido.}
+\end{itemize}
+
